<resources>
    <string name="app_name">Atmel Smart Gateway</string>
    <string name="wifi_first">请先连上Wi-Fi网络</string>
    <string name="wifi_name">Wi-Fi名称</string>
    <string name="tip_exit">再按一次退出程序</string>
    <string name="please_connect_network">请连接网络！</string>
    <string name="title_about">关于</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="dialog_sure_to_delete">确定要删除设备吗？</string>
    <string name="dialog_sure_to_off">确定要关闭设备吗？</string>
    <string name="dialog_sure_psw_change">账号新密码即将生效，\n是否确认修改？</string>
    <string name="dialog_btn_back">返回</string>
    <string name="dialog_btn_logout">注销</string>
    <string name="dialog_btn_delete">删除</string>
    <string name="dialog_btn_cancel">取消</string>
    <string name="dialog_btn_confirm">确定</string>
    <string name="dialog_disconnect">连接已断开</string>
    <string name="dialog_nonet_msg">手机还未连上Wi-Fi，请连接上您希望设备接入的Wi-Fi（如您家里的Wi-Fi），连接后请返回APP，将自动跳转到下一步</string>
    <string name="dialog_logout_msg">确定要注销，返回登陆界面吗？</string>
    <string name="dialog_delete_msg">是否删除：</string>
    <string name="register_name_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="airlink_tips_start">请按下设备按键,灯闪即表示设备已进入配置模式,\n点击开始配置</string>
    <string name="airlink_btn_start">开始配置</string>
    <string name="airlink_please_wait">设备连接中，请耐心等待.</string>
    <string name="airlink_tips_error1">配置失败了，让我们看看哪里可能出了错：</string>
    <string name="airlink_tips_error2">1.设备是否正常运行？\n2.Wi-Fi网络是否连接顺畅？</string>
    <string name="airlink_tips_error3">请拔下设备电源，再重新接通电源，再点击重试</string>
    <string name="airlink_btn_retry">已经重新拔插电源了，我要重试</string>
    <string name="airlink_btn_softap">手动配置</string>
    <string name="title_alarm_list">故障信息</string>
    <string name="btn_call">联系客服</string>
    <string name="autoconfig_keep_wifi">请保持Wi-Fi连接</string>
    <string name="autoconfig_password">Wi-Fi密码</string>
    <string name="btn_next">下一步</string>
    <string name="binding_start_config_text1">请按下设备按键,灯闪即表示设备已进入配置模式,\n请在此界面等待几秒，界面将会自动跳转。</string>
	<string name="binding_start_config_text2">已按下按键，但是界面一直没跳转？</string>
	<string name="binding_config_failed_text1">配置失败了，让我们看看哪里可能出了错：</string>
	<string name="binding_config_failed_text2">1.设备是否正常运行？\n2.Wi-Fi网络是否连接顺畅？</string>
	<string name="binding_config_failed_text3">请拔下设备电源，再重新接通电源，再点击重试</string>
	<string name="binding_config_failed_text4">已经重新拔插电源了，我要重试</string>
	<string name="new_password">新密码</string>
	<string name="change_password">修改密码</string>
	<string name="old_password">旧密码</string>
	<string name="confirm">确定</string>
	<string name="cancel">取消</string>
	<string name="password">密码</string>
	<string name="setting_password">设置密码</string>
	<string name="curve_text1">室内温度曲线</string>
	<string name="device_list">Device List</string>
	<string name="device_manage">Device Management</string>
	<string name="device_manage_text1">生产日期：XXXX.XX.XX</string>
	<string name="device_manage_text2">生产地点：XXXXX</string>
	<string name="device_manage_text3">设备型号：XXXXX</string>
	<string name="device_manage_text4">设备序列号：XXXXXXXXXXXXXXXX</string>
	<string name="device_name">设备名称</string>
	<string name="name">名称</string>
	<string name="delete_centercontrol">删除中控</string>
	<string name="forget_password">忘记密码</string>
	<string name="forget_password_hint1">手机号/邮箱</string>
	<string name="forget_password_get_verifycode">获取验证码</string>
	<string name="forget_password_get_verifycode2">获取验\n证码</string>
	<string name="forget_password_get_verifycode3">秒后\n重新获取</string>
	<string name="forget_password_verifycode">验证码</string>
	<string name="forget_password_get_verifycode_again">重新获取\n验证码</string>
    <string name="help">Help</string>
    <string name="help_for_device">设备使用帮助</string>
    <string name="help_for_app">APP使用帮助</string>
    <string name="login_name_hint">手机／邮箱</string>
    <string name="login_forget_password">忘记密码?</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="main_control_title">Smart Gateway</string>
    <string name="main_control_timing_shutdown">定时关机</string>
    <string name="main_control_advanced_features">高级功能</string>
    <string name="main_control_temp_curve">温度曲线</string>
    <string name="main_control_celsius">摄氏</string>
    <string name="main_control_refrigeration">制冷</string>
    <string name="main_control_indoor_temp">室内温度</string>
    <string name="main_control_degree">°</string>
    <string name="main_control_set_temp">设定温度</string>
    <string name="main_control_low_wind">低风</string>
    <string name="main_control_regular_wind">中风</string>
    <string name="main_control_high_wind">高风</string>
    <string name="main_control_shake_wind">摆风</string>
    <string name="main_control_turn_on">开机</string>
    <string name="main_control_timing_turn_on">定时开机</string>
    <string name="register_email">邮箱</string>
    <string name="register_use_mobilephone">手机注册</string>
    <string name="register_use_email">邮箱注册</string>
    <string name="register_tips1">请输入您的真实邮箱，确保日后可找回密码。\n注册成功后会向您发送邮件</string>
    <string name="register_phone_num">手机号</string>
    <string name="search_device_already_configure">已配置的设备</string>
    <string name="search_device_tips1">你的网络中还没有已配置的设备,如已经配置过,\n请确认手机正连接着与设备相同的wifi.</string>
	<string name="search_device_configure_qr_code">二维码扫描添加虚拟设备</string>
	<string name="search_device_configure">我要配置gokit</string>
	<string name="search_centerctrl_configure">我要配置中控</string>
	<string name="account_manage">Account Management</string>
	<string name="about">About</string>
	<string name="back_to_device_list">Go back to device list</string>
    <string name="zigbee_factory_reset">Zigbee factory reset</string>
	<string name="softap_text1">1.请复制以下密码:</string>
	<string name="softap_password">123456789</string>
	<string name="softap_text2">2.请进入设置>Wi-Fi，选择XPG-GAGENT-XXXX(XXXX为本模块mac的后四位),输入刚刚复制的密码;</string>
	<string name="softap_text3">3.完成后请返回此界面,将自动跳转到下一步.</string>
	<string name="softap_text4">Wi-Fi名称:home</string>
	<string name="softap_text5">Wi-Fi密码</string>
	<string name="softap_text6">连接网络</string>
	<string name="softap_text7">设备连接中，请耐心等待.</string>
	<string name="softap_text8">配置成功，记得切换回Wi-Fi网络哦！</string>
	<string name="softap_text9">切换好了</string>
	<string name="softap_text10">配置失败了,请拔下设备电源,再重新接通电源，再点击重试。</string>
	<string name="softap_text11">我已经重新拔插电源了，我要重试</string>
	<string name="user_manage">用户管理</string>
	<string name="user_name">用户名</string>
	<string name="logout">注销</string>
	<string name="change_success">修改成功</string>
	<string name="change_fail">修改失败</string>
	
	<string name="no_device">No device</string>
	<string name="device_online">Online Device</string>
	<string name="aircondition">空调</string>
	<string name="remote_online">在线设备</string>
	<string name="not_processing">暂不处理</string>
	<string name="call_customer_service">拨打客服</string>
	
	<string name="dialog_call_sure_to_logout">确定要注销，返回登陆界面吗？</string>
	<string name="call_customer_service_hot_line">拨打客服热线</string>
	<string name="qr_code_tips">将二维码放入框内，即刻自动扫描</string>
	
	<string name="reset_by_phone">通过手机重置密码</string>
	<string name="reset_by_email">通过邮箱重置密码</string>
    <string name="connect_buttons">Connect to ATMEL Wi-Fi</string>
    <string name="ssidchange_buttons">SSID / Security / PW</string>


    <string name="alert_smartlink_title">Smart connect Alert</string>
    <string name="alert_invalid_input_title">Invalid input</string>
    <string name="alert_successfully_connected">Easylink App Connected Successfully</string>
    <string name="alert_connection_failed">Failed to configure EMW device</string>
    <string name="alert_connection_timeout">Connection to EMW was timed out.Please try again</string>
    <string name="alert_successfully_failed">Failed to configure EMW device</string>
    <string name="alert_no_network_title">No Network</string>
    <string name="alert_invalid_password_msg">Please enter valid password</string>
    <string name="alert_invalid_gatewayip_msg">Please enter valid Gateway IP address</string>
    <string name="alert_invalid_ssid_mesg">Please enter valid SSID</string>
    <string name="alert_invalid_key_mesg">Please enter valid Key exactly 16 characters</string>
    <string name="alert_no_wifi_mesg">WiFi not available.Please check your WiFi connection.</string>
    <string name="smartlink_string_ok">ok</string>

    <string name="ssid_label">SSID</string>
    <string name="password_hint">password </string>
    <string name="password_name">Password </string>
    <string name="key_label">Node Type</string>
    <string name="change_label">Change target SSID      ></string>
    <string name="start_label">Start</string>
    <string name="config_title">Atmel Smart Connect</string>
    <string name="AddScene">If you love the effect of now, click me to save it</string>
    <string name="iFttt">IFTTT</string>
    <string-array name="planets_array">
        <item>XPG-gagent-108C</item>
    </string-array>
</resources>
